2007-05-14  Chad Fowler  <chad@chadfowler.com>
 	* lib/rubygems/command_manager.rb: Re-added registration for 
        gem cleanup command which I accidentally removed during refactoring.

2007-05-10  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/remote_installer.rb: Uncommented the require
	'sources' line.

	* lib/rubygems/source_info_cache.rb: Uncommented the require
	'sources' line.

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to version 0.9.3
	in preparation for release.

	* lib/rubygems/package.rb (Gem::TarInput::zipped_stream):
	Zipped_stream now always uses the in memory string IO buffer.
	There were just too many problems with ZLib (on windows)
	otherwise.

2007-03-26  Jim Weirich  <jim@weirichhouse.org>

	*  (Index): new digest technique.

	* lib/rubygems/validator.rb (Gem::Validator::verify_gem): Removed
	really old MD5 and replaced with gem based digests.  
	
	* experimental/deployment.rb (Gem::Deployment::Manager::initialize):
	New digest technique.

	* experimental/test_deployment.rb (TestDeployment::test_deployed_file):
          New digest technique.

2007-03-26  Chad Fowler <chad@chadfowler.com>

  * Extracted the big ball of mud that was gem_commands.rb into    
    separate files.

2007-03-17  Chad Fowler <chad@chadfowler.com>

  * Various ruby 1.8.6 fixes for failing tests.
  
  * Updated setup.rb to 3.4.1
  
  * Renamed cmd_manager to command_manager to keep names consistent
  
  * lib/installer.rb: Rework path checking to use Pathname (ara howard bug #8811)
  
2007-03-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb: Add bin directory before library directory,
	otherwise gems like rake don't work.

2007-03-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/open-uri.rb: Fix all the infinite loop errors.

	* lib/rubygems.rb: Add dirs from activate after -I and ENV['RUBYLIB']
	dirs.  Otherwise gems won't allow -I to work when #gem is called.

2007-02-11  Chad Fowler <chad@chadfowler.com>
